--- a/extension/trunk/source/com/bedrock/extension/view/popups/GenericEnvironmentPopupView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/GenericEnvironmentPopupView.mxml
@@ -9,7 +9,7 @@
 			
 			public function populate( $environmentID:String ):void
 			{
-				this.selectedEnvironment = ArrayUtil.findIndex( ProjectController.getInstance().config.environmentIDs.source, $environmentID );
+				this.selectedEnvironment = ArrayUtil.findIndex( ProjectController.instance.config.environmentIDs.source, $environmentID );
 			}
 			
 		]]>
