--- a/extension/trunk/source/com/bedrock/extension/view/popups/ProjectUpdateView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/ProjectUpdateView.mxml
@@ -19,29 +19,29 @@
 			{
 				this._switchFrameworkVersion = false;
 				
-				this.frameworkVersionCombo.dataProvider = ExtensionController.instance().versions;
-				var numIndex:int = ArrayUtil.findIndex( ExtensionController.instance().versions, ExtensionController.instance().projectXML.frameworkVersion );
+				this.frameworkVersionCombo.dataProvider = ExtensionController.instance.versions;
+				var numIndex:int = ArrayUtil.findIndex( ExtensionController.instance.versions, ExtensionController.instance.projectXML.frameworkVersion );
 				this.frameworkVersionCombo.selectedIndex = ( numIndex > -1 ) ? numIndex : 0;
 				
-				this.frameworkVersionCombo.enabled = false;//( ExtensionController.getInstance().projectXML.frameworkCopy.toString() == "swc" );
+				this.frameworkVersionCombo.enabled = false;//( ExtensionController.getinstance.projectXML.frameworkCopy.toString() == "swc" );
 				
-				this.projectNameText.text = ExtensionController.instance().projectXML.@name;
-				this.widthText.text = ExtensionController.instance().projectXML.width;
-				this.heightText.text = ExtensionController.instance().projectXML.height;
-				this.colorPicker.selectedColor = ExtensionController.instance().projectXML.stageColor;
-				this.publishProjectCheck.selected = VariableUtil.sanitize( ExtensionController.instance().projectXML.publishProject );
+				this.projectNameText.text = ExtensionController.instance.projectXML.@name;
+				this.widthText.text = ExtensionController.instance.projectXML.width;
+				this.heightText.text = ExtensionController.instance.projectXML.height;
+				this.colorPicker.selectedColor = ExtensionController.instance.projectXML.stageColor;
+				this.publishProjectCheck.selected = VariableUtil.sanitize( ExtensionController.instance.projectXML.publishProject );
 				
 			}
 			
 			
 			private function _updateProperties():void
 			{
-				ExtensionController.instance().projectXML.@name = this.projectNameText.text;
-				ExtensionController.instance().projectXML.frameworkVersion = this.frameworkVersionCombo.selectedLabel;
-				ExtensionController.instance().projectXML.width = this.widthText.text;
-				ExtensionController.instance().projectXML.height = this.heightText.text;
-				ExtensionController.instance().projectXML.stageColor = this.colorPicker.selectedColor;
-				ExtensionController.instance().projectXML.publishProject = this.publishProjectCheck.selected;
+				ExtensionController.instance.projectXML.@name = this.projectNameText.text;
+				ExtensionController.instance.projectXML.frameworkVersion = this.frameworkVersionCombo.selectedLabel;
+				ExtensionController.instance.projectXML.width = this.widthText.text;
+				ExtensionController.instance.projectXML.height = this.heightText.text;
+				ExtensionController.instance.projectXML.stageColor = this.colorPicker.selectedColor;
+				ExtensionController.instance.projectXML.publishProject = this.publishProjectCheck.selected;
 			}
 			private function _sanitizeFolder( $text:String ):String
 			{
@@ -51,12 +51,12 @@
 			
 			private function _updateProject():void
 			{
-				ExtensionController.instance().updateProject( this._switchFrameworkVersion );
+				ExtensionController.instance.updateProject( this._switchFrameworkVersion );
 				this.closePopup();
 			}
 			private function _updateFrameworkVersion():void
 			{
-				if ( VariableUtil.sanitizeBoolean( ExtensionController.instance().projectXML.@generated ) && !this._switchFrameworkVersion ) {
+				if ( VariableUtil.sanitizeBoolean( ExtensionController.instance.projectXML.@generated ) && !this._switchFrameworkVersion ) {
 					Alert.show("Switching framework versions can be... unpredictable.\nAre you sure you want to proceed?","Warning!", Alert.OK|Alert.CANCEL,this, this._onCloseAlert, null, Alert.OK);
 				} else {
 					this._updateProperties();
@@ -73,7 +73,7 @@
 						this._updateProperties();
 						break;
 					default :
-						var numIndex:int = ArrayUtil.findIndex( ExtensionController.instance().versions, ExtensionController.instance().projectXML.frameworkVersion );
+						var numIndex:int = ArrayUtil.findIndex( ExtensionController.instance.versions, ExtensionController.instance.projectXML.frameworkVersion );
 						this.frameworkVersionCombo.selectedIndex = ( numIndex > -1 ) ? numIndex : 0;
 						break;
 				}
