--- a/extension/trunk/source/com/bedrock/extension/view/ArchiveView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/ArchiveView.mxml
@@ -20,23 +20,23 @@
 			
 			private function findProject():void
 			{
-				if ( !ExtensionController.instance().findProject() ) {
+				if ( !ExtensionController.instance.findProject() ) {
 					Alert.show( "Invalid project file!", "Warning!" );
 				}
 			}
 			public function _showCreateProject():void
 			{
 				this.projectGrid.selectedIndex = -1;
-				ExtensionController.instance().createProject();
+				ExtensionController.instance.createProject();
 				
-				PopUpManager.addPopUp( this._projectCreationView, ExtensionController.instance().root, true );
+				PopUpManager.addPopUp( this._projectCreationView, ExtensionController.instance.root, true );
 				PopUpManager.centerPopUp( this._projectCreationView );
 				
 				this._projectCreationView.populate();
 			}
 			private function _loadProject():void
 			{
-				if ( !ExtensionController.instance().loadProject( this.projectGrid.selectedItem.path ) ) {
+				if ( !ExtensionController.instance.loadProject( this.projectGrid.selectedItem.path ) ) {
 					Alert.show( "Boo! Project \"" + this.projectGrid.selectedItem.name + "\" failed!", "Warning!" );
 				}
 			}
@@ -48,7 +48,7 @@
 			{
 				switch ( $event.detail ) {
 					case Alert.OK :
-						ExtensionController.instance().removeProject( this.projectGrid.selectedItem.id );
+						ExtensionController.instance.removeProject( this.projectGrid.selectedItem.id );
 						break;
 				}
 			}
@@ -57,7 +57,7 @@
 		]]>
 	</mx:Script>
 		
-	<mx:DataGrid width="100%" height="100%" sortableColumns="true" id="projectGrid" doubleClickEnabled="true" dataProvider="{ ExtensionController.instance().projects }" itemClick="{ this.loadProjectButton.enabled = true }" itemDoubleClick="this._loadProject()">
+	<mx:DataGrid width="100%" height="100%" sortableColumns="true" id="projectGrid" doubleClickEnabled="true" dataProvider="{ ExtensionController.instance.projects }" itemClick="{ this.loadProjectButton.enabled = true }" itemDoubleClick="this._loadProject()">
 		<mx:columns>
 			<mx:DataGridColumn headerText="Name" dataField="name" width="150"/>
 			<mx:DataGridColumn headerText="Path" dataField="path"/>
