--- a/extension/trunk/source/com/bedrock/extension/view/ExtensionView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/ExtensionView.mxml
@@ -41,7 +41,7 @@
 				this._extensionSettingsView = new ExtensionSettingsView;
 				this._extensionSettingsView.initialize();
 				
-				this.projectContainer.addChild( ExtensionController.instance().moduleLoader );
+				this.projectContainer.addChild( ExtensionController.instance.moduleLoader );
 			}
 			
 			private function _showSettings():void
@@ -67,7 +67,7 @@
 			
 			private function _updateAutoHideMenu():void
 			{
-				var autoHideMenu:Boolean = VariableUtil.sanitize( ExtensionController.instance().settingsXML.autoHideMenu );
+				var autoHideMenu:Boolean = VariableUtil.sanitize( ExtensionController.instance.settingsXML.autoHideMenu );
 				if ( autoHideMenu ) {
 					this.addEventListener( Event.ENTER_FRAME, this._onEnterFrame );
 					this._hideMainNavigation();
@@ -149,9 +149,9 @@
 			<mx:Spacer width="100%"/>
 		</mx:HBox>
 		<mx:HBox x="0" y="0" width="100%" height="55" verticalAlign="middle" horizontalAlign="center" styleName="padded">
-			<mx:VBox height="100%"  visible="{ VariableUtil.sanitize( ExtensionController.instance().projectXML.@generated ) }" styleName="menuBox" id="projectDetailContainer" click="this._onProjectLoaded( event )" buttonMode="true" mouseChildren="false">
-				<mx:Label id="projectLabel"  text="Project : { ExtensionController.instance().projectXML.@name }" color="#FFFFFF"/>
-				<mx:Label id="versionLabel"  text="Version : { ExtensionController.instance().projectXML.frameworkVersion }" color="#FFFFFF"/>
+			<mx:VBox height="100%"  visible="{ VariableUtil.sanitize( ExtensionController.instance.projectXML.@generated ) }" styleName="menuBox" id="projectDetailContainer" click="this._onProjectLoaded( event )" buttonMode="true" mouseChildren="false">
+				<mx:Label id="projectLabel"  text="Project : { ExtensionController.instance.projectXML.@name }" color="#FFFFFF"/>
+				<mx:Label id="versionLabel"  text="Version : { ExtensionController.instance.projectXML.frameworkVersion }" color="#FFFFFF"/>
 			</mx:VBox>
 			<mx:Spacer width="100%"/>
 			<mx:VBox height="100%" backgroundColor="#000000" id="buttonContainer" styleName="menuBox" horizontalAlign="right" >
