--- a/extension/trunk/source/com/bedrock/extension/view/extras/ClassGeneratorView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/extras/ClassGeneratorView.mxml
@@ -11,7 +11,7 @@
 			{
 				this.fileGrid.columns[ 0 ].width = 150;
 				
-				this.openClassesCheck.selected = VariableUtil.sanitize( ExtrasController.getInstance().classGenerator.data.@openClasses );
+				this.openClassesCheck.selected = VariableUtil.sanitize( ExtrasController.instance.classGenerator.data.@openClasses );
 				
 				this.updateList();
 			}
@@ -33,7 +33,7 @@
 			}
 			public function updateList():void
 			{
-				ExtrasController.getInstance().classGenerator.reset();
+				ExtrasController.instance.classGenerator.reset();
 				
 				if ( this.viewCheck.selected ) this.appendFile( this.viewCheck.label, this.viewCombo.selectedLabel );
 				if ( this.modelCheck.selected ) this.appendFile( this.modelCheck.label, null, this.modelSingletonCheck.selected );
@@ -50,7 +50,7 @@
 			}
 			private function appendFile( $type:String, $inherit:String = "", $singleton:Boolean = false ):void
 			{
-				ExtrasController.getInstance().classGenerator.addFile( this.nameText.text, $type, $inherit, $singleton );
+				ExtrasController.instance.classGenerator.addFile( this.nameText.text, $type, $inherit, $singleton );
 			}
 			private function toggleModelSingleton():void
 			{
@@ -78,12 +78,12 @@
 			}
 			private function toggleOpenClasses():void
 			{
-				ExtrasController.getInstance().classGenerator.data.@openClasses = this.openClassesCheck.selected;
+				ExtrasController.instance.classGenerator.data.@openClasses = this.openClassesCheck.selected;
 			}
 			
 			public function generateClasses():void
 			{
-				if ( ExtrasController.getInstance().classGenerator.generateClasses() ) {
+				if ( ExtrasController.instance.classGenerator.generateClasses() ) {
 					Alert.show( "Files created successfully!", "Attention!" );
 					this.resetList();
 				} else {
@@ -95,7 +95,7 @@
 	<mx:HBox  width="100%" height="100%" >
 		
 			<mx:Panel width="100%" height="100%" layout="vertical" title="Output">
-				<mx:DataGrid width="100%" height="100%" editable="false" enabled="false" id="fileGrid" dataProvider="{ ExtrasController.getInstance().classGenerator.data.files..file }">
+				<mx:DataGrid width="100%" height="100%" editable="false" enabled="false" id="fileGrid" dataProvider="{ ExtrasController.instance.classGenerator.data.files..file }">
 					<mx:columns>
 						<mx:DataGridColumn headerText="File Name" dataField="@className"/>
 						<mx:DataGridColumn headerText="Class Package" dataField="@classPackage"/>
