--- a/extension/trunk/source/com/bedrock/extension/view/misc/HierarchyControlBar.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/misc/HierarchyControlBar.mxml
@@ -45,7 +45,7 @@
         [Event(name="deleteNode", type="com.bedrock.extension.event.ExtensionEvent")]
         [Event(name="calculateBytes", type="com.bedrock.extension.event.ExtensionEvent")]
     </mx:Metadata>
-    <mx:Button click="ProjectController.getInstance().config.saveConfig()" id="saveConfigButton" icon="{ SaveIcon }" toolTip="Save Config"/>
+    <mx:Button click="ProjectController.instance.config.saveConfig()" id="saveConfigButton" icon="{ SaveIcon }" toolTip="Save Config"/>
 	<mx:Button click="this._reloadConfig()" id="refreshConfigButton" icon="{ RefreshIcon }" toolTip="Reload Config"/>
 	<mx:Button click="this._notify( 'deselectNode' )" id="nodeDeselectButton" icon="{ DeselectIcon }" toolTip="Deselect"/>
 	<mx:Button click="this._notify( 'calculateBytes' )" id="calculateBytesButton" icon="{ CalculateBytesIcon }" toolTip="Calculate Bytes" visible="{ this.showCalculateBytesButton }"/>
