--- a/extension/trunk/source/com/bedrock/extension/view/popups/AssetGroupCreationView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/AssetGroupCreationView.mxml
@@ -14,7 +14,7 @@
             {
             	if ( this.idText.text != "" && this.idText.text != null ) {
 	            	var xmlContent:XML = new XML( <assetGroup id={ this.idText.text } initialLoad={ this.initialLoadCheck.selected } /> ); 
-	            	ProjectController.getInstance().config.assets.appendChild( xmlContent );
+	            	ProjectController.instance.config.assets.appendChild( xmlContent );
 	            	this.closePopup( true );
             	}
             }
