--- a/extension/trunk/source/com/bedrock/extension/view/popups/SettingCreationView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/SettingCreationView.mxml
@@ -7,7 +7,7 @@
 			override public function populate( $environmentID:String ):void
 			{
 				super.populate( $environmentID );
-				this.environmentCombo.dataProvider = ProjectController.getInstance().config.environmentIDs;
+				this.environmentCombo.dataProvider = ProjectController.instance.config.environmentIDs;
 				this.environmentCombo.selectedIndex = this.selectedEnvironment;
 				this.showPopup();
 			}
@@ -15,7 +15,7 @@
 			private function _create():void
             {
             	if ( this.valueText.text != "" ) {
-	            	var xmlNode:XML = ProjectController.getInstance().config.environments..environment.( @id == this.environmentCombo.selectedLabel )[ 0 ];
+	            	var xmlNode:XML = ProjectController.instance.config.environments..environment.( @id == this.environmentCombo.selectedLabel )[ 0 ];
 	            	xmlNode.appendChild( <setting id={ this.idCombo.selectedLabel } value={ this.valueText.text } /> );
 	            	
 	            	this.closePopup( true );
@@ -28,7 +28,7 @@
 	
 		<mx:Form width="100%" >
 			<mx:FormItem label="ID" width="100%" >
-				<mx:ComboBox id="idCombo" dataProvider="{ ProjectController.getInstance().config.settings..setting }" labelField="@id" />
+				<mx:ComboBox id="idCombo" dataProvider="{ ProjectController.instance.config.settings..setting }" labelField="@id" />
 			</mx:FormItem>
 			<mx:FormItem label="Value" width="100%" >
 				<mx:TextInput id="valueText" />
