--- a/extension/trunk/source/com/bedrock/extension/view/project/BrowserView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/project/BrowserView.mxml
@@ -49,23 +49,23 @@
 			private function _applyIcons():void
             {
             	var xmlItem:XML;
-				for each ( xmlItem in ProjectController.getInstance().browser.files..file.( @type == ".swf") ) {
+				for each ( xmlItem in ProjectController.instance.browser.files..file.( @type == ".swf") ) {
 					this.fileTree.setItemIcon( xmlItem, SWFIcon, SWFIcon );
 				}
-				for each ( xmlItem in ProjectController.getInstance().browser.files..file.( @type == ".fla") ) {
+				for each ( xmlItem in ProjectController.instance.browser.files..file.( @type == ".fla") ) {
 					if ( xmlItem.@name != "shell" ) {
 						this.fileTree.setItemIcon( xmlItem, FLAIcon, FLAIcon );
 					} else {
 						this.fileTree.setItemIcon( xmlItem, DefaultFLAIcon, DefaultFLAIcon );
 					}
 				}
-				for each ( xmlItem in ProjectController.getInstance().browser.files..file.( @type == ".as") ) {
+				for each ( xmlItem in ProjectController.instance.browser.files..file.( @type == ".as") ) {
 					this.fileTree.setItemIcon( xmlItem, ASIcon, ASIcon );
 				}
-				for each ( xmlItem in ProjectController.getInstance().browser.files..file.( @type == ".bedrock") ) {
+				for each ( xmlItem in ProjectController.instance.browser.files..file.( @type == ".bedrock") ) {
 					this.fileTree.setItemIcon( xmlItem, BedrockIcon, BedrockIcon );
 				}
-				for each ( xmlItem in ProjectController.getInstance().browser.files..file.( @type == ".swc") ) {
+				for each ( xmlItem in ProjectController.instance.browser.files..file.( @type == ".swc") ) {
 					this.fileTree.setItemIcon( xmlItem, SWCIcon, SWCIcon );
 				}
 				
@@ -73,7 +73,7 @@
             
             private function _togglePublish():void
             {
-            	for each( var flaXML:XML in ProjectController.getInstance().projectXML..file ) {
+            	for each( var flaXML:XML in ProjectController.instance.projectXML..file ) {
             		if ( flaXML.@name != BedrockData.SHELL ) {
             			flaXML.@publish = this._toggleStatus;
             		}	
@@ -84,7 +84,7 @@
             
 			private function _refreshContents():void
 			{
-				ProjectController.getInstance().browser.refresh();
+				ProjectController.instance.browser.refresh();
 			}
 			private function _deleteFile():void
 			{
@@ -97,8 +97,8 @@
 			{
 				switch ( $event.detail ) {
 					case Alert.OK :
-						ProjectController.getInstance().delegate.deleteFile( this.fileTree.selectedItem.@path );
-						ProjectController.getInstance().browser.refresh();
+						ProjectController.instance.delegate.deleteFile( this.fileTree.selectedItem.@path );
+						ProjectController.instance.browser.refresh();
 						break;
 				}
 			}
@@ -111,10 +111,10 @@
 			{
 				switch( VariableUtil.sanitize( this.fileTree.selectedItem.@type ) ) {
 					case ".fla" :
-						ProjectController.getInstance().delegate.openFLA( this.fileTree.selectedItem.@path );
+						ProjectController.instance.delegate.openFLA( this.fileTree.selectedItem.@path );
 						break;
 					case ".as" :
-						ProjectController.getInstance().delegate.openScript( this.fileTree.selectedItem.@path );
+						ProjectController.instance.delegate.openScript( this.fileTree.selectedItem.@path );
 						break;
 				}
 			}
@@ -122,7 +122,7 @@
 		]]>
 	</mx:Script>
 	<mx:Panel width="100%" height="100%" title="Project Browser" layout="vertical" >
-			<mx:AdvancedDataGrid id="fileTree" dataProvider="{ ProjectController.getInstance().browser.fileHierarchy }" designViewDataType="tree" doubleClickEnabled="true" displayItemsExpanded="false" sortExpertMode="true" width="100%" height="100%" itemDoubleClick="this.onTreeDoubleClick( event )">
+			<mx:AdvancedDataGrid id="fileTree" dataProvider="{ ProjectController.instance.browser.fileHierarchy }" designViewDataType="tree" doubleClickEnabled="true" displayItemsExpanded="false" sortExpertMode="true" width="100%" height="100%" itemDoubleClick="this.onTreeDoubleClick( event )">
 			<mx:headerRenderer>
 				<mx:Component>
 					<mx:AdvancedDataGridHeaderRenderer horizontalAlign="left"/>
@@ -136,7 +136,7 @@
 			</mx:columns>
 		</mx:AdvancedDataGrid>
 		
-		<!--<mx:Tree id="fileTree" width="100%" showRoot="false" height="100%" labelField="@name" dataProvider="{ ApplicationController.getInstance().project.files }"/>-->
+		<!--<mx:Tree id="fileTree" width="100%" showRoot="false" height="100%" labelField="@name" dataProvider="{ ApplicationController.instance.project.files }"/>-->
 		<mx:ControlBar horizontalAlign="left">
 			<mx:Button click="this._refreshContents()" id="refreshButton" icon="{ RefreshIcon }"/>
 			<mx:Button click="this._deleteFile()" id="deleteButton" icon="{ TrashIcon }"/>
