--- a/extension/trunk/source/com/bedrock/extension/view/project/LocalesView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/project/LocalesView.mxml
@@ -31,7 +31,7 @@
             {
             	if ( this.nodeTree.selectedIndex != -1 ) {
 					this._deleteLocale();
-					ProjectController.getInstance().config.autoSaveConfig();
+					ProjectController.instance.config.autoSaveConfig();
 					this.attributeEditor.clearForm();
             	}
             }
@@ -40,7 +40,7 @@
 			*/
             private function _deleteLocale():void
             {
-            	delete ProjectController.getInstance().config.locales..locale.( @id == this.nodeTree.selectedItem.@id )[ 0 ];
+            	delete ProjectController.instance.config.locales..locale.( @id == this.nodeTree.selectedItem.@id )[ 0 ];
             }
             /*
             Interface Functions
@@ -64,7 +64,7 @@
 	</mx:Script>
 		
 	<mx:Panel  title="Hierarchy" width="100%" height="100%">
-		<mx:AdvancedDataGrid id="nodeTree" designViewDataType="tree" displayItemsExpanded="true" sortExpertMode="true" width="100%" height="100%" dataProvider="{ ProjectController.getInstance().config.localeHierarchy }" defaultLeafIcon="{ LocaleIcon }" folderOpenIcon="{ LocaleIcon }" folderClosedIcon="{ LocaleIcon }" itemClick="this._onTreeSelect(event)">
+		<mx:AdvancedDataGrid id="nodeTree" designViewDataType="tree" displayItemsExpanded="true" sortExpertMode="true" width="100%" height="100%" dataProvider="{ ProjectController.instance.config.localeHierarchy }" defaultLeafIcon="{ LocaleIcon }" folderOpenIcon="{ LocaleIcon }" folderClosedIcon="{ LocaleIcon }" itemClick="this._onTreeSelect(event)">
 	        <mx:headerRenderer>
 				<mx:Component>
 					<mx:AdvancedDataGridHeaderRenderer horizontalAlign="left"/>
@@ -76,7 +76,7 @@
 			</mx:columns>
 		</mx:AdvancedDataGrid>
 		
-		<misc:HierarchyControlBar creationOptions="{ ProjectController.getInstance().resources.getBundle( 'localeCreationOptions' ) }" id="hierarchyControlBar" createNode="this.createNode()" deleteNode="this.deleteNode()" deselectNode="this._deselect()" />
+		<misc:HierarchyControlBar creationOptions="{ ProjectController.instance.resources.getBundle( 'localeCreationOptions' ) }" id="hierarchyControlBar" createNode="this.createNode()" deleteNode="this.deleteNode()" deselectNode="this._deselect()" />
 	</mx:Panel>
 	
 	<misc:AttributeEditor id="attributeEditor" title="Editing : { this.nodeTree.selectedItem.@id }" />
